<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColorSingin"/>

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/account_card_details"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textColor="@color/textColorSingin"/>

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/lastname"
                android:textSize="20sp"
                android:textColor="@color/textColorSingin"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLastName"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvRule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rule"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="position"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <com.rilixtech.materialfancybutton.MaterialFancyButton
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        fancy:mfb_defaultColor="@color/loginBG"
        fancy:mfb_focusColor="@color/loginBHFO"
        fancy:mfb_radius="30dp"
        fancy:mfb_text="@string/update"
        fancy:mfb_textSize="16sp" />

</LinearLayout>