<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginBG"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/imgDevice"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Brnad"
                    android:textColor="@color/textColorSingin"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvBrandName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="Name"
                    android:textColor="@color/textColorSingin"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvEmpName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tran_emp_name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDateLend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datelend"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDateReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datereturn"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="Status"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <com.rilixtech.materialfancybutton.MaterialFancyButton
                    android:id="@+id/btnReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:visibility="gone"
                    fancy:mfb_defaultColor="@color/RED"
                    fancy:mfb_focusColor="@color/buttondeleteFC"
                    fancy:mfb_radius="30dp"
                    fancy:mfb_text="@string/return_device"
                    fancy:mfb_textSize="16sp" />

                <com.rilixtech.materialfancybutton.MaterialFancyButton
                    android:id="@+id/btnLend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:visibility="gone"
                    fancy:mfb_defaultColor="@color/green"
                    fancy:mfb_focusColor="@color/donestate"
                    fancy:mfb_radius="30dp"
                    fancy:mfb_text="@string/lend"
                    fancy:mfb_textSize="16sp" />

                <com.rilixtech.materialfancybutton.MaterialFancyButton
                    android:id="@+id/btnConnUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    fancy:mfb_defaultColor="@color/loginBG"
                    fancy:mfb_focusColor="@color/colorAccent"
                    fancy:mfb_radius="30dp"
                    fancy:mfb_text="@string/conn_user"
                    fancy:mfb_textSize="16sp"
                    android:visibility="gone"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>



    </LinearLayout>

</ScrollView>